--- a/index.html
+++ b/index.html
@@ -1,7 +1,179 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+
+		<title>Storytelling Side Accordion - A story map presented by Esri</title>
+
+		<meta name="author" content="">
+		<meta name="keywords" content="">
+		<meta name="description" content="">
+
+		<!--Facebook Open Graph-->
+		<meta property="og:title" content="" />
+		<meta property="og:type" content="article" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="" />
+		<meta property="og:site_name" content="Esri" />
+		<meta property="og:description" content=""/>
+		<meta property="fb:app_id" content="" />
+		<!--End Facebook-->
+
+		<!--Twitter Card Data-->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="">
+		<meta name="twitter:url" content="">
+		<meta name="twitter:title" content="">
+		<meta name="twitter:description" content="">
+		<meta name="twitter:image" content="">
+		<!--Twitter Card Data-->
+
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
+		<link type="image/ico" rel="shortcut icon" href="//resources.esri.com/favicon.ico">
+		<link type="image/ico" rel="icon"  href="//resources.esri.com/favicon.ico">
+
+		<link rel="stylesheet" type="text/css" href="lib/normalize.css">
+		
+		<link rel="stylesheet" href="//js.arcgis.com/3.8/js/dojo/dijit/themes/tundra/tundra.css">
+		<link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.8/js/esri/css/esri.css" />
+
+		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+		<!--[if IE 7]>
+		<link rel="stylesheet" href="lib/font-awesome/font-awesome-ie7.min.css">
+		<![endif]-->
+
+		<link rel="stylesheet" type="text/css" href="app/utils/Helper.css">
+		<link rel="stylesheet" type="text/css" href="app/ui/TimeSlider.css">
+		<link rel="stylesheet" type="text/css" href="app/series/core/Core.css">
+
+		<script type="text/javascript">
+			var dojoConfig = {
+				parseOnLoad: true,
+				isDebug: false,
+				packages: [
+				{
+					name: 'storymaps',
+					location: location.pathname.replace(/\/[^/]+$/, '/') + 'app'
+				}
+				]
+			};
+		</script>
+
+		<!--Social Media Links-->
+		<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+		<script type="text/javascript">
+			stLight.options({publisher: "77225c91-2742-42f7-b1b4-bddda99a9bde"});
+		</script>
+		<!--END Social Media Links-->
+
+		<!--  Here a user can edit the size and visibility of the numbers that are displayed.
+		By default, this is turned off.  User must remove the comment to activate. -->
+		<!--
+		<style type="text/css">
+			.accordion-header-number {
+				visibility: collapse;
+				width: 0;
+				height: 0;
+				font-size: 0px;
+				}
+			.accordion-header-arrow {
+				top: 0px;
+			}
+		</style>
+		-->
+		
+	</head>
+	<body class="tundra">
+
+		<div id="application-window">
+
+			<div id="banner" class="region-top">
+
+				<div id="header-text" class="region-center">
+					<h1 id="title"></h1>
+					<h2 id="subtitle"></h2>
+					<p id="hide-intro" class="intro-toggle">H I D E</p>
+				</div><!--/header-text-->
+
+				<i id="accordion-toggle" class="icon-list-ol"></i>
+				<div id="mobile-header"></div>
+
+				<div id="mobile-nav">
+					<span class="left-nav intro-toggle">INTRO</span>
+					<span class="map-toggle">MAP</span>
+					<span class="right-nav legend-toggle">LEGEND</span>
+				</div><!--/mobile-nav-->
+
+				<div id="branding-wrapper" class="region-right">
+					<div id="social">
+						<a id="smLink" href="http://storymaps.esri.com" target="_blank">A story map </a>
+						<span class='st_facebook'></span>
+						<span class='st_twitter' st_via='EsriStoryMaps'></span>
+						<span class='st_sharethis'></span>
+					</div><!--/social-->
+					<div id="logo">
+						<a id="logoLink" href="http://www.esri.com" target="_blank">
+							<img id="logoImg" src="resources/images/app/esriGlobeLogow.png" alt="Esri - Home">
+						</a><!--/logoLink-->
+					</div><!--/logo-->
+				</div><!--/branding-wrapper-->
+
+			</div><!--/banner-->
+
+			<div id="content" class="region-center">
+
+				<div id="side-pane" class="region-left">
+				</div><!--/side-panel-->
+
+				<div id="map-content" class="region-center">
+
+					<div id="time-pane" class="region-top"></div>
+
+					<div id="map-pane" class="region-center">
+
+						<img class="loader loader80" src="resources/images/app/loader.gif" alt="Loading">
+						
+						<div id="legend-wrapper">
+							<div id="close-mobile-legend" class="mobile-close legend-toggle"><i class="icon-remove"></i></div>
+							<div id="legend-toggle" class="legend-toggle">LEGEND</div>
+							<div id="legend-pane">
+							</div><!--/legend-pane-->
+						</div>
+
+						<div id="mobile-popup">
+							<div id="close-mobile-popup" class="mobile-close mobile-popup-toggle"><i class="icon-remove"></i></div>
+						</div><!--/mobile-popup-->
+
+					</div><!--/map-pane-->
+
+				</div><!--/map-content-->
+
+			</div><!--/content-->
+
+			<div id="mobile-navigation" class="region-bottom">
+				<div id="mobile-navigation-arrow"></div>
+				<div id="mobile-navigation-content"></div>
+			</div>
+
+		</div><!--application-window-->
+
+		<script type="text/javascript" src="//js.arcgis.com/3.8/"></script>
+		<script type="text/javascript" src="lib/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript">
+
+			//GET Application Config
+			require(["storymaps/series/Config"]);
+
+			require(["storymaps/series/core/Core"], function(core){
+				core.init();
+			});
+
+		</script>
+
+
+	</body>
 </html>
