cambio titolo e autore

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 
-		<title>Storytelling Side Accordion - A story map presented by Esri</title>
+		<title>Dalla carta al web - Una story map di Paolo Oscar e Luca Moiana</title>
 
-		<meta name="author" content="">
-		<meta name="keywords" content="">
+		<meta name="author" content="Paolo Oscar, Luca Moiana">
+		<meta name="keywords" content="Franciacorta, Cartografia, Storica, Historical, Cartography">
 		<meta name="description" content="">
 
 		<!--Facebook Open Graph-->
@@ -13,7 +13,7 @@
 		<meta property="og:type" content="article" />
 		<meta property="og:url" content="" />
 		<meta property="og:image" content="" />
-		<meta property="og:site_name" content="Esri" />
+		<meta property="og:site_name" content="Paolo Oscar e Luca Moiana" />
 		<meta property="og:description" content=""/>
 		<meta property="fb:app_id" content="" />
 		<!--End Facebook-->
