--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:type" content="article" />
 		<meta property="og:url" content="" />
 		<meta property="og:image" content="" />
-		<meta property="og:site_name" content="Paolo Oscar e Luca Moiana" />
+		<meta property="og:site_name" content="" />
 		<meta property="og:description" content=""/>
 		<meta property="fb:app_id" content="" />
 		<!--End Facebook-->
