ripristinato il testo iniziale

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 
-		<title>Dalla carta al web - Una story map di Paolo Oscar e Luca Moiana</title>
+		<title>Storytelling Side Accordion - A story map presented by Esri</title>
 
-		<meta name="author" content="Paolo Oscar, Luca Moiana">
-		<meta name="keywords" content="Franciacorta, Cartografia, Storica, Historical, Cartography">
+		<meta name="author" content="">
+		<meta name="keywords" content="">
 		<meta name="description" content="">
 
 		<!--Facebook Open Graph-->
@@ -13,7 +13,7 @@
 		<meta property="og:type" content="article" />
 		<meta property="og:url" content="" />
 		<meta property="og:image" content="" />
-		<meta property="og:site_name" content="" />
+		<meta property="og:site_name" content="Esri" />
 		<meta property="og:description" content=""/>
 		<meta property="fb:app_id" content="" />
 		<!--End Facebook-->
@@ -110,13 +110,13 @@
 
 				<div id="branding-wrapper" class="region-right">
 					<div id="social">
-						<a id="smLink" href="http://http://www.paolooscar.com/" target="_blank">Cartografia Storica</a>
+						<a id="smLink" href="http://storymaps.esri.com" target="_blank">A story map </a>
 						<span class='st_facebook'></span>
 						<span class='st_twitter' st_via='EsriStoryMaps'></span>
 						<span class='st_sharethis'></span>
 					</div><!--/social-->
 					<div id="logo">
-						<a id="logoLink" href="http://www.paolooscar.com/" target="_blank">
+						<a id="logoLink" href="http://www.esri.com" target="_blank">
 							<img id="logoImg" src="resources/images/app/esriGlobeLogow.png" alt="Esri - Home">
 						</a><!--/logoLink-->
 					</div><!--/logo-->
