aggiunti meta tag

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 		<title>Storytelling Side Accordion - A story map presented by Esri</title>
 
-		<meta name="author" content="">
-		<meta name="keywords" content="">
-		<meta name="description" content="">
+		<meta name="author" content="Paolo Oscar e Luca Moiana">
+		<meta name="keywords" content="GIS WEBGIS MAP MAPPA STORICA HISTORIC esri STORYTELLING USER CONFERENCE ITALY 15 2014">
+		<meta name="description" content="storytelling esri sulla creazione di una webmap da cartografia storica mediante strumenti esri, presentazione per la 15ma conferenza italiana utenti esri 2014">
 
 		<!--Facebook Open Graph-->
 		<meta property="og:title" content="" />
