--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 
-		<title>Storytelling Side Accordion - A story map presented by Esri</title>
+		<title>Dalla carta al webgis, storytelling esri</title>
 
 		<meta name="author" content="Paolo Oscar e Luca Moiana">
 		<meta name="keywords" content="GIS WEBGIS MAP MAPPA STORICA HISTORIC esri STORYTELLING USER CONFERENCE ITALY 15 2014">
