--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<meta name="description" content="storytelling esri sulla creazione di una webmap da cartografia storica mediante strumenti esri, presentazione per la 15ma conferenza italiana utenti esri 2014">
 
 		<!--Facebook Open Graph-->
-		<meta property="og:title" content="" />
+		<meta property="og:title" content="Dalla carta al webgis, storytelling esri" />
 		<meta property="og:type" content="article" />
-		<meta property="og:url" content="" />
+		<meta property="og:url" content="http://lucamoiana.github.io" />
 		<meta property="og:image" content="" />
-		<meta property="og:site_name" content="Esri" />
+		<meta property="og:site_name" content="Dalla carta al webgis, storytelling esri" />
 		<meta property="og:description" content=""/>
 		<meta property="fb:app_id" content="" />
 		<!--End Facebook-->
@@ -22,9 +22,10 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="">
 		<meta name="twitter:url" content="">
-		<meta name="twitter:title" content="">
-		<meta name="twitter:description" content="">
+		<meta name="twitter:title" content="Dalla carta al webgis, storytelling esri">
+		<meta name="twitter:description" content="Storytelling per la 15ma Conferenza Utenti esri">
 		<meta name="twitter:image" content="">
+		<meta name="twitter:author" content="@lucamoiana">
 		<!--Twitter Card Data-->
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
