--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 		<!--Twitter Card Data-->
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="">
-		<meta name="twitter:url" content="">
+		<meta name="twitter:site" content="@lucamoiana">
+		<meta name="twitter:url" content="www.paolooscar.com">
 		<meta name="twitter:title" content="Dalla carta al webgis, storytelling esri">
 		<meta name="twitter:description" content="Storytelling per la 15ma Conferenza Utenti esri">
 		<meta name="twitter:image" content="">
