ancora meta di facebook

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:url" content="http://lucamoiana.github.io" />
 		<meta property="og:image" content="" />
 		<meta property="og:site_name" content="Dalla carta al webgis, storytelling esri" />
-		<meta property="og:description" content=""/>
+		<meta property="og:description" content="Storytelling per la 15ma Conferenza Utenti esri"/>
 		<meta property="fb:app_id" content="" />
 		<!--End Facebook-->
 
