--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 
 				<div id="branding-wrapper" class="region-right">
 					<div id="social">
-						<a id="smLink" href="http://storymaps.esri.com" target="_blank">A story map </a>
+						<a id="smLink" href="http://www.paolooscar.com" target="_blank">WWW </a>
 						<span class='st_facebook'></span>
-						<span class='st_twitter' st_via='EsriStoryMaps'></span>
+						<span class='st_twitter' st_via='@lucamoiana'></span>
 						<span class='st_sharethis'></span>
 					</div><!--/social-->
 					<div id="logo">
-						<a id="logoLink" href="http://www.esri.com" target="_blank">
+						<a id="logoLink" href="http://www.paolooscar.com" target="_blank">
 							<img id="logoImg" src="resources/images/app/esriGlobeLogow.png" alt="Esri - Home">
 						</a><!--/logoLink-->
 					</div><!--/logo-->
