--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 				<div id="branding-wrapper" class="region-right">
 					<div id="social">
-						<a id="smLink" href="http://www.paolooscar.com" target="_blank">WWW </a>
+						<a id="smLink" href="http://www.paolooscar.com" target="_blank">WWW</a>
 						<span class='st_facebook'></span>
 						<span class='st_twitter' st_via='@lucamoiana'></span>
 						<span class='st_sharethis'></span>
@@ -138,11 +138,11 @@
 
 						<img class="loader loader80" src="resources/images/app/loader.gif" alt="Loading">
 						
-						<div id="legend-wrapper">
+						<!-- <div id="legend-wrapper">
 							<div id="close-mobile-legend" class="mobile-close legend-toggle"><i class="icon-remove"></i></div>
 							<div id="legend-toggle" class="legend-toggle">LEGEND</div>
 							<div id="legend-pane">
-							</div><!--/legend-pane-->
+							</div> /legend-pane-->
 						</div>
 
 						<div id="mobile-popup">
