sistemato twitter @lucamoiana

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<div id="social">
 						<a id="smLink" href="http://www.paolooscar.com" target="_blank">WWW</a>
 						<span class='st_facebook'></span>
-						<span class='st_twitter' st_via='@lucamoiana'></span>
+						<span class='st_twitter' st_via='lucamoiana'></span>
 						<span class='st_sharethis'></span>
 					</div><!--/social-->
 					<div id="logo">
