--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
 
 						<img class="loader loader80" src="resources/images/app/loader.gif" alt="Loading">
 						
-						<!-- <div id="legend-wrapper">
+						<div id="legend-wrapper">
 							<div id="close-mobile-legend" class="mobile-close legend-toggle"><i class="icon-remove"></i></div>
 							<div id="legend-toggle" class="legend-toggle">LEGEND</div>
 							<div id="legend-pane">
-							</div> /legend-pane-->
+							</div> <!-- /legend-pane-->
 						</div>
 
 						<div id="mobile-popup">
