provato a levare solo legend toggle

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						
 						<div id="legend-wrapper">
 							<div id="close-mobile-legend" class="mobile-close legend-toggle"><i class="icon-remove"></i></div>
-							<div id="legend-toggle" class="legend-toggle">LEGEND</div>
+							<!-- <div id="legend-toggle" class="legend-toggle">LEGEND</div>-->
 							<div id="legend-pane">
 							</div> <!-- /legend-pane-->
 						</div>
