linea 37 aggiunto elenco completo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-		<link type="image/ico" rel="shortcut icon" href="//favicon.ico">
+		<link type="image/ico" rel="shortcut icon" href="http://lucamoiana.github.io/favicon.ico">
 		<link type="image/ico" rel="icon"  href="//resources.esri.com/favicon.ico">
 
 		<link rel="stylesheet" type="text/css" href="lib/normalize.css">
