Aggiunta id mappa del rugareto

--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -18,7 +18,7 @@
 
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+var map = L.mapbox.map('map', 'lucamoiana.map-wh4s1tnz')
     .setView([0, 0], 3);
 
 // add a new line to the map, but one with no points - yet
