eliminata la parte dell'aggiunta punti

--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -21,7 +21,7 @@
 var map = L.mapbox.map('map', 'lucamoiana.map-wh4s1tnz')
     .setView([0, 0], 3);
 
-// add a new line to the map, but one with no points - yet
+/* // add a new line to the map, but one with no points - yet
 var polyline = L.polyline([]).addTo(map);
 
 // keep a tally of how many points we've added to the map
@@ -47,6 +47,7 @@ function add() {
     // to call add() in a 100 milliseconds
     if (++pointsAdded < 360) window.setTimeout(add, 100);
 }
+*/
 </script>
 
 
