--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -18,7 +18,7 @@
 
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'lucamoiana.map-wh4s1tnz')
+var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
     .setView([0, 0], 3);
 /*     .centerzoom({ lat: 38.9, lon: -77.03 }, 5);
 
