--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset=utf-8 />
-<title>A Simple Map</title>
+<title>Centering Markers</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
@@ -13,10 +14,17 @@
 </style>
 </head>
 <body>
+
+
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    .setView([40, -74.50], 9);
+    var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
+
+    map.markerLayer.on('click', function(e) {
+        map.panTo(e.layer.getLatLng());
+    });
 </script>
+
+
 </body>
 </html>
