--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Centering Markers</title>
+<title>A Simple Map</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
@@ -18,11 +18,8 @@
 
 <div id='map'></div>
 <script>
-    var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
-
-    map.markerLayer.on('click', function(e) {
-        map.panTo(e.layer.getLatLng());
-    });
+var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+    .setView([40, -74.50], 9);
 </script>
 
 
