--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -27,6 +27,9 @@ var polyline = L.polyline([]).addTo(map);
 // keep a tally of how many points we've added to the map
 var pointsAdded = 0;
 
+// Aggiunta sorgente dati GEOJSON
+<script src="https://gist.github.com/LucaMoiana/fc40fec0c6682cac00f6.js"></script>
+
 </script>
 
 
