--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -4631,7 +4631,9 @@ var line_points = [
 //var pointsAdded = 0;
 
 // Aggiunta sorgente dati GEOJSON
-// <script src="https://gist.github.com/LucaMoiana/fc40fec0c6682cac00f6.js"></script>
+// <script src="https://gist.github.com/LucaMoiana/fc40fec0c6682cac00f6.js">
+
+map.markerLayer.setGeoJSON(https://gist.github.com/LucaMoiana/fc40fec0c6682cac00f6.js);
 
 </script>
 
