--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>A Simple Map</title>
+<title>Polylines</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
@@ -14,36 +14,37 @@
 </style>
 </head>
 <body>
-
-
 <div id='map'></div>
 <script>
 var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    .setView([45.649, 8.946], 14);
-    
+    .setView([38.89399, -77.03659], 17);
+
+// Define circle options
+// http://leafletjs.com/reference.html#circle
+var circle_options = {
+    color: '#fff',      // Stroke color
+    opacity: 1,         // Stroke opacity
+    weight: 10,         // Stroke weight
+    fillColor: '#000',  // Fill color
+    fillOpacity: 0.6    // Fill opacity
+};
+
+var circle_one = L.circle([38.89415, -77.03738], 20, circle_options).addTo(map);
+var circle_two = L.circle([38.89415, -77.03578], 20, circle_options).addTo(map);
 
 // Create array of lat,lon points
 var line_points = [
-[
-            8.97068090736866,
-            45.65694088116288
-          ],
-          [
-            8.970648385584354,
-            45.65698572434485
-          ],
-          [
-            8.970669256523252,
-            45.65700785256922
-          ],
-          [
-            8.97083479911089,
-            45.65721203573048
-          ],
-          [
-            8.971006879583001,
-            45.65742057748139
-          ]
+    [38.893596444352134, -77.0381498336792],
+    [38.89337933372204, -77.03792452812195],
+    [38.89316222242831, -77.03761339187622],
+    [38.893028615148424, -77.03731298446655],
+    [38.892920059048464, -77.03691601753235],
+    [38.892903358095296, -77.03637957572937],
+    [38.89301191422077, -77.03592896461487],
+    [38.89316222242831, -77.03549981117249],
+    [38.89340438498248, -77.03514575958252],
+    [38.893596444352134, -77.0349633693695]
+];
 
 // Define polyline options
 // http://leafletjs.com/reference.html#polyline
@@ -51,9 +52,10 @@ var polyline_options = {
     color: '#000'
 };
 
-
+// Defining a polygon here instead of a polyline will connect the
+// endpoints and fill the path.
+// http://leafletjs.com/reference.html#polygon
+var polyline = L.polyline(line_points, polyline_options).addTo(map);
 </script>
-
-
 </body>
 </html>
