--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -48,9 +48,9 @@ var line_points = [
 
 // Define polyline options
 // http://leafletjs.com/reference.html#polyline
-var polyline_options = {
-    color: '#000'
-};
+//var polyline_options = {
+//    color: '#000'
+//};
 
 // Defining a polygon here instead of a polyline will connect the
 // endpoints and fill the path.
