--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -29,8 +29,8 @@ var circle_options = {
     fillOpacity: 0.6    // Fill opacity
 };
 
-var circle_one = L.circle([8.970648385584354, 45.65698572434485], 20, circle_options).addTo(map);
-var circle_two = L.circle([8.970669256523252, 45.65700785256922], 20, circle_options).addTo(map);
+var circle_one = L.circle([8.97064, 45.65698], 20, circle_options).addTo(map);
+var circle_two = L.circle([8.97066, 45.65700], 20, circle_options).addTo(map);
 
 // Create array of lat,lon points
 var line_points = [
