--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -947,6 +947,24 @@ var polyline_options = {
 // endpoints and fill the path.
 // http://leafletjs.com/reference.html#polygon
 var polyline = L.polyline(line_points, polyline_options).addTo(map);
+
+    // addLatLng takes a new latLng location and puts it at the end of the
+    // line. You could pull points from your data or generate them - this
+    // example just makes a sine wave with some math.
+    polyline.addLatLng(
+        L.latLng(
+            Math.cos(pointsAdded / 20) * 30,
+            pointsAdded));
+
+    // pan the map along with where the line is being added. optional, of course
+    map.setView([0, pointsAdded], 3);
+
+    // then, if we haven't already added a lot of points, queue up the page
+    // to call add() in a 100 milliseconds
+    if (++pointsAdded < 360) window.setTimeout(add, 100);
+}
+
+
 </script>
 </body>
 </html>
