--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -943,15 +943,11 @@ var polyline_options = {
     color: '#000'
 };
 
-for each (var item in line_points)
-{
-  L.polyline(line_points, polyline_options).addTo(map);;
-}
 
 // Defining a polygon here instead of a polyline will connect the
 // endpoints and fill the path.
 // http://leafletjs.com/reference.html#polygon
-//var polyline = L.polyline(line_points, polyline_options).addTo(map);
+var polyline = L.polyline(line_points, polyline_options).addTo(map);
 
     // addLatLng takes a new latLng location and puts it at the end of the
     // line. You could pull points from your data or generate them - this
