--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -943,10 +943,26 @@ var polyline_options = {
     color: '#000'
 };
 
+//create a new array to get the animation
+
+var draw_points = [];
+//document.write(draw_points);
+
+function polyLineFuncion()
+{
+var polyline = L.polyline(draw_points, polyline_options).addTo(map);
+}
+
+for (var i = 0; i < line_points.length; i++) {
+        var entry = line_points[i];
+        draw_points.push(entry);
+        setTimeout(polyLineFuncion(){},2000);
+    };
+
 // Defining a polygon here instead of a polyline will connect the
 // endpoints and fill the path.
 // http://leafletjs.com/reference.html#polygon
-var polyline = L.polyline(line_points, polyline_options).addTo(map);
+
 </script>
 </body>
 </html>
