--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -946,17 +946,11 @@ var polyline_options = {
 //create a new array to get the animation
 
 var draw_points = [];
-//document.write(draw_points);
-
-function polyLineFuncion()
-{
-var polyline = L.polyline(draw_points, polyline_options).addTo(map);
-}
 
 for (var i = 0; i < line_points.length; i++) {
         var entry = line_points[i];
         draw_points.push(entry);
-        setTimeout(polyLineFuncion(){},2000);
+        polyline = L.polyline(draw_points, polyline_options).addTo(map);
     };
 
 // Defining a polygon here instead of a polyline will connect the
