--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -947,19 +947,10 @@ var polyline_options = {
 
 var draw_points = [];
 
-
-
-function myFunction()
-{
-polyline = L.polyline(draw_points, polyline_options).addTo(map);
-};
-
-
-
 for (var i = 0; i < line_points.length; i++) {
         var entry = line_points[i];
         draw_points.push(entry);
-        setTimeout(myFunction,100,)
+        setTimeout(polyline = L.polyline(draw_points, polyline_options).addTo(map),100,)
     };
 
 // Defining a polygon here instead of a polyline will connect the
