--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -950,7 +950,7 @@ var draw_points = [];
 for (var i = 0; i < line_points.length; i++) {
         var entry = line_points[i];
         draw_points.push(entry);
-        polyline = L.polyline(draw_points, polyline_options
+        setTimeout(function() {polyline = L.polyline(draw_points, polyline_options; }, 1000*i); 
     };
 
 // Defining a polygon here instead of a polyline will connect the
