--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -945,13 +945,13 @@ var polyline_options = {
 
 //create a new array to get the animation
 
-// var draw_points = [];
+var draw_points = [];
 
-// for (var i = 0; i < line_points.length; i++) {
-//         var entry = line_points[i];
-//         draw_points.push(entry);
-//         setTimeout(function() {polyline = L.polyline(draw_points, polyline_options; }, 1000*i); 
-//     };
+for (var i = 0; i < line_points.length; i++) {
+  var entry = line_points[i];
+  draw_points.push(entry);
+  polyline = L.polyline(draw_points, polyline_options;
+   };
 
 // Defining a polygon here instead of a polyline will connect the
 // endpoints and fill the path.
