--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -952,7 +952,7 @@ for (var i = 0; i < line_points.length; i++)
 	{
   var entry = line_points[i];
   draw_points.push(entry);
-  polyline = L.polyline(draw_points, polyline_options);
+  var polyline = L.polyline(draw_points, polyline_options);
    };
 
 // Defining a polygon here instead of a polyline will connect the
