--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -948,12 +948,14 @@ var polyline_options = {
 //create an empty array to loop
 var draw_points = [];
 
-for (var i = 0; i < line_points.length; i++)
-	{
-  var entry = line_points[i];
-  draw_points.push(entry);
-  var polyline = L.polyline(draw_points, polyline_options);
-   };
+//for (var i = 0; i < line_points.length; i++)
+//	{
+//  var entry = line_points[i];
+//  draw_points.push(entry);
+//  var polyline = L.polyline(draw_points, polyline_options);
+//	};
+
+var polyline = L.polyline(line_points, polyline_options).addTo(map);
 
 // Defining a polygon here instead of a polyline will connect the
 // endpoints and fill the path.
