--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -952,7 +952,7 @@ for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
 	draw_points.push(entry);
-	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
+	var timeoutID = window.setTimeout(L.polyline(draw_points, polyline_options).addTo(map), 1000);
 	};
 
 //var polyline = L.polyline(line_points, polyline_options).addTo(map);
