--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -942,7 +942,7 @@ var line_points = [
 // Define polyline options
 // http://leafletjs.com/reference.html#polyline
 var polyline_options = {
-    color: '#000'
+    color: ' #ff69b4'
 };
 
 //create an empty array to loop
