--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -948,13 +948,13 @@ var polyline_options = {
 //create an empty array to loop
 var draw_points = [];
 
-var timeoutID = window.setTimeout(for (var i = 0; i < line_points.length; i++)
+for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
 	draw_points.push(entry);
 	
 	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
-	}, 1000);
+	};
 
 //var polyline = L.polyline(line_points, polyline_options).addTo(map);
 
