--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -945,22 +945,17 @@ var polyline_options = {
     color: '#000'
 };
 
-//create an empty array to loop
-var draw_points = [];
-
-for (var i = 0; i < line_points.length; i++)
+function createLine()
+{for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
 	draw_points.push(entry);
-	
 	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
 	};
+};
 
-//var polyline = L.polyline(line_points, polyline_options).addTo(map);
+var timeoutID = window.setTimeout(createLine, 3000,);
 
-// Defining a polygon here instead of a polyline will connect the
-// endpoints and fill the path.
-// http://leafletjs.com/reference.html#polygon
 
 </script>
 </body>
