--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -945,16 +945,16 @@ var polyline_options = {
     color: '#000'
 };
 
-function createLine()
-{for (var i = 0; i < line_points.length; i++)
+//create an empty array to loop
+var draw_points = [];
+
+for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
 	draw_points.push(entry);
+	
 	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
 	};
-};
-
-var timeoutID = window.setTimeout(createLine, 3000,);
 
 
 </script>
