--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -951,7 +951,7 @@ var draw_points = [];
 for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
-	draw_points.push(entry);
+	setTimeout(function() {draw_points.push(entry); }, 1000);
 	
 	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
 	};
