--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -951,9 +951,9 @@ var draw_points = [];
 for (var i = 0; i < line_points.length; i++)
 	{
 	var entry = line_points[i];
-	draw_points.push(entry); }, 1000);
+	draw_points.push(entry);
 	
-	var polyline = L.polyline(draw_points, polyline_options).addTo(map);
+	setTimeout(function() {var polyline = L.polyline(draw_points, polyline_options).addTo(map);}, 1000*i);
 	};
 
 
