--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -68,9 +68,9 @@ var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
     .setView([45.649, 8.946], 14);
 var ui = document.getElementById('map-ui');
 
-addLayer(L.mapbox.tileLayer('lucamoiana.hgm54l0b'), 'Base Map', 1);
-addLayer(L.mapbox.tileLayer('examples.bike-lanes'), 'Bike Lanes', 2);
-addLayer(L.mapbox.tileLayer('examples.bike-locations'), 'Bike Stations', 3);
+addLayer(L.mapbox.tileLayer('lucamoiana.hgm54l0b'), 'S 6Km', 1);
+addLayer(L.mapbox.tileLayer('examples.bike-lanes'), 'M 14Km', 2);
+addLayer(L.mapbox.tileLayer('examples.bike-locations'), 'L 20Km', 3);
 
 function addLayer(layer, name, zIndex) {
     layer
