--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,13 +64,13 @@
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+var map = L.mapbox.map('map', 'lucamoiana.hgm54l0b')
     .setView([45.649, 8.946], 14);
 var ui = document.getElementById('map-ui');
 
-addLayer(L.mapbox.tileLayer('lucamoiana.hgm54l0b'), 'S 6Km', 1);
-addLayer(L.mapbox.tileLayer('examples.bike-lanes'), 'M 14Km', 2);
-addLayer(L.mapbox.tileLayer('examples.bike-locations'), 'L 20Km', 3);
+addLayer(L.mapbox.tileLayer('lucamoiana.corto_2014'), 'S 6Km', 1);
+addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), 'M 14Km', 2);
+addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), 'L 20Km', 3);
 
 function addLayer(layer, name, zIndex) {
     layer
