create classi bottoni e assegnato colori

--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,12 +54,25 @@
     border-radius: 3px 3px 0 0;
 }
 
-#map-ui a.active {
+#map-ui a:active {
     background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
 }
+
+#map-ui a.corto_2014:active {
+    background: #548cba;
+}
+
+#map-ui a.medio_2014:active {
+    background: #fa946e;
+}
+
+#map-ui a.lungo_2014:active {
+    background: #f5c272;
+}
+
 </style>
 <ul id='map-ui'></ul>
 <div id='map'></div>
