cambiati link a active

--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -61,15 +61,15 @@
     color: #FFF;
 }
 
-#map-ui a.corto_2014:active {
+#map-ui .corto_2014 a:active {
     background: #548cba;
 }
 
-#map-ui a.medio_2014:active {
+#map-ui .medio_2014 a:active {
     background: #fa946e;
 }
 
-#map-ui a.lungo_2014:active {
+#map-ui .lungo_2014 a:active {
     background: #f5c272;
 }
 
