--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,7 +54,7 @@
     border-radius: 3px 3px 0 0;
 }
 
-#map-ui a:active {
+#map-ui a.active {
     background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
