--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,8 +54,8 @@
     border-radius: 3px 3px 0 0;
 }
 
-#map-ui a.active {
-    background: #3887BE;
+#map-ui a.corto_2014:active {
+    background: red;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
