--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,11 +54,14 @@
     border-radius: 3px 3px 0 0;
 }
 
-#map-ui a.corto_2014:active {
-    background: red;
+#map-ui a:active {
+    background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
+}
+#map-ui lucamoiana.corto_2014 a:active {
+    background: #548cba;
 }
 
 </style>
