--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,15 +54,21 @@
     border-radius: 3px 3px 0 0;
 }
 
-#map-ui a:active {
+#map-ui a.active {
     background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
 }
-#map-ui lucamoiana.corto_2014 a:active {
-    background: #548cba;
+
+#map-ui a.1:active {
+    background: #3887BE;
+    border-color: #3887BE;
+    border-top-color: #FFF;
+    color: #FFF;
 }
+
+
 
 </style>
 <ul id='map-ui'></ul>
