--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -55,7 +55,8 @@
 }
 
 
-#map-ui a.1:active {
+
+#map-ui 1 a:active {
     background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
