--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -56,7 +56,7 @@
 
 
 
-#map-ui 1 a:active {
+#map-ui a.1:active {
     background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
