--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -57,7 +57,7 @@
 
 
 #map-ui a.active {
-    background: #3887BE;
+    background: red;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
