--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,6 +64,13 @@
 }
 
 
+#map-ui a.1:active {
+    background: pink;
+    border-color: #3887BE;
+    border-top-color: #FFF;
+    color: #FFF;
+}
+
 </style>
 <ul id='map-ui'></ul>
 <div id='map'></div>
