--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,7 +64,7 @@
 }
 
 
-#map-ui a.corto_2014:active {
+#map-ui a.lucamoiana.corto_2014:active {
     background: pink;
     border-color: #3887BE;
     border-top-color: #FFF;
