--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,7 +64,7 @@
 }
 
 
-#map-ui .corto_2014 {
+#map-ui li.corto_2014 {
     background: pink;
     border-color: #3887BE;
     border-top-color: #FFF;
