--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -54,23 +54,12 @@
     border-radius: 3px 3px 0 0;
 }
 
-
-
 #map-ui a.active {
-    background: red;
+    background: #3887BE;
     border-color: #3887BE;
     border-top-color: #FFF;
     color: #FFF;
 }
-
-
-#map-ui a.1 {
-    background: pink;
-    border-color: #3887BE;
-    border-top-color: #FFF;
-    color: #FFF;
-}
-
 </style>
 <ul id='map-ui'></ul>
 <div id='map'></div>
