--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -68,7 +68,7 @@ var map = L.mapbox.map('map', 'lucamoiana.hgm54l0b')
     .setView([45.649, 8.946], 14);
 var ui = document.getElementById('map-ui');
 
-addLayer(L.mapbox.tileLayer('lucamoiana.corto_2014'), '6Km', 1);
+addLayer(L.mapbox.tileLayer('lucamoiana.hloc8el3'), '6Km', 1);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14Km', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20Km', 3);
 
