--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,7 +64,7 @@
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'lucamoiana.hgm54l0b')
+var map = L.mapbox.map('map', 'examples.map-20v6611k')
     .setView([45.649, 8.946], 14);
 var ui = document.getElementById('map-ui');
 
