--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -64,7 +64,7 @@
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+var map = L.mapbox.map('map', 'examples.map-zr0njcqy')
     .setView([45.649, 8.946], 14);
 var ui = document.getElementById('map-ui');
 
