--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -61,47 +61,49 @@
     color: #FFF;
 }
 </style>
-<ul id='map-ui'></ul>
-<div id='map'></div>
-<script>
+ <ul id='map-ui'></ul>
+    <div id='map'></div>
+    <script>
+        var map = L.mapbox.map('map', 'lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
+        var ui = document.getElementById('map-ui');
 
-var map = L.mapbox.map('map').setView([45.649, 8.946], 14);
-var ui = document.getElementById('map-ui');
 
-addLayer(L.mapbox.tileLayer(''), '6Km', 1);
-addLayer(L.mapbox.tileLayer(''), '14Km', 2);
-addLayer(L.mapbox.tileLayer(''), '20Km', 3);
+        addLayer(L.mapbox.tileLayer(''), 'Ristoro', 4);
+        addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), 'Corto 6Km', 3);
+        addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), 'Medio 14Km', 2);
+        addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), 'Lungo 20Km', 1);
 
-function addLayer(layer, name, zIndex) {
-    layer
-        .setZIndex(zIndex)
-        .addTo(map);
 
-    // Create a simple layer switcher that toggles layers on
-    // and off.
-    var item = document.createElement('li');
-    var link = document.createElement('a');
 
-    link.href = '#';
-    link.className = 'active';
-    link.innerHTML = name;
+        function addLayer(layer, name, zIndex) {
+            layer.setZIndex(zIndex)
+                .addTo(map);
 
-    link.onclick = function(e) {
-        e.preventDefault();
-        e.stopPropagation();
+            // Create a simple layer switcher that toggles layers on
+            // and off.
+            var item = document.createElement('li');
+            var link = document.createElement('a');
 
-        if (map.hasLayer(layer)) {
-            map.removeLayer(layer);
-            this.className = '';
-        } else {
-            map.addLayer(layer);
-            this.className = 'active';
+            link.href = '#';
+            link.className = 'active';
+            link.innerHTML = name;
+
+            link.onclick = function(e) {
+                e.preventDefault();
+                e.stopPropagation();
+
+                if (map.hasLayer(layer)) {
+                    map.removeLayer(layer);
+                    this.className = '';
+                } else {
+                    map.addLayer(layer);
+                    this.className = 'active';
+                }
+            };
+
+            item.appendChild(link);
+            ui.appendChild(item);
         }
-    };
-
-    item.appendChild(link);
-    ui.appendChild(item);
-}
-</script>
+    </script>
 </body>
 </html>
