--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -65,6 +65,7 @@
     <div id='map'></div>
     <script>
         var map = L.mapbox.map('map', 'lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
+        map.gridControl.options.follow = true;
         var ui = document.getElementById('map-ui');
 
 
