--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -69,7 +69,7 @@
         var ui = document.getElementById('map-ui');
 
 
-        addLayer(L.mapbox.tileLayer(''), 'Ristoro', 4);
+        //addLayer(L.mapbox.tileLayer(''), 'Ristoro', 4);
         addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), 'Corto 6Km', 3);
         addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), 'Medio 14Km', 2);
         addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), 'Lungo 20Km', 1);
