--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>5 Maratonina del Rugareto 18/05/2014</title>
+<title>5 Maratonina del Rugareto</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
