--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -27,8 +27,8 @@
 
 #map-ui a {
     font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
-    background:  #89B51E;
-    color: #466100;
+    background: #FFF;
+    color: #3C4E5A;
     display: block;
     margin: 0;
     padding: 0;
