--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Layers</title>
+<title>V Maratonina del Rugareto</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
@@ -66,12 +66,12 @@
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
-var map = L.map('map', 'lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
+var map = L.map('lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
 
-addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 1);
+addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
-addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 3);
+addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
