--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -66,7 +66,7 @@
 <ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
-var map = L.map('map', 'lucamoiana.hgm54l0b').setView([45.642, 8.954], 14);
+var map = L.map('map', 'lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
 
 addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
