--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -71,7 +71,7 @@ var ui = document.getElementById('map-ui');
 
 addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
-addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014b'), '20 KM', 1);
+addLayer(L.mapbox.tileLayer('lucamoiana.hm036pn5'), '20 KM', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
