--- a/owm.html
+++ b/owm.html
@@ -22,7 +22,7 @@
       map.setView(new L.LatLng(55.5, 37.5), 9)
       map.addLayer(osmLayer);
  
-      var validatorsLayer = new OsmJs.Weather.LeafletLayer({lang: 'it'});
+      var validatorsLayer = new OsmJs.Weather.LeafletLayer({lang: 'ru'});
  
       map.addLayer(validatorsLayer);
     </script>
