--- a/markers.html
+++ b/markers.html
@@ -18,7 +18,7 @@
 
 <div id='map'></div>
 <script>
-var map = L.mapbox.map('map', 'examples.map-20v6611k').setView([39.12367, -76.81229], 9);
+var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 
 var myLayer = L.mapbox.featureLayer().addTo(map);
 
