--- a/markers.html
+++ b/markers.html
@@ -31,7 +31,7 @@ var geoJson = {
         },
         geometry: {
             type: 'Point',
-            coordinates: [45.64008765934397, 8.965272903442383]
+            coordinates: [45.640, 8.965]
         }
     },
     {
@@ -41,7 +41,7 @@ var geoJson = {
         },
         geometry: {
             type: 'Point',
-            coordinates: [45.641587880901234, 8.954200744628906]
+            coordinates: [45.641, 8.954]
         }
     }]
 };
