--- a/mapbox_2.html
+++ b/mapbox_2.html
@@ -84,7 +84,7 @@ var ui = document.getElementById('map-ui');
 addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), 'Small', 3);
 addLayer(L.mapbox.featureLayer('lucamoiana.i057npjm'), 'Ristori Small', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), 'Medium', 2);
-addLayer(L.mapbox.featureLayer('lucamoiana.i0588kkf'), 'Ristori Medium, 2);
+addLayer(L.mapbox.featureLayer('lucamoiana.i0588kkf'), 'Ristori Medium', 2);
 addLayer(L.mapbox.featureLayer('lucamoiana.i058i92l'), 'Large', 1);
 addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), 'Ristori Large', 1);
 
