--- a/mapbox_2.html
+++ b/mapbox_2.html
@@ -85,7 +85,7 @@ addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 Km', 5);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 Km', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 Km', 3);
 addLayer(L.mapbox.featureLayer('lucamoiana.i09fgicl'), 'Ristori', 2);
-addLayer(L.mapbox.featureLayer('lucamoiana.i058i92l'), 'Parcheggi', 1);
+addLayer(L.mapbox.featureLayer('lucamoiana.i2f34pn3'), 'Parcheggi', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
