Update and rename mapbox_2.html to 5Mdr.html

--- a/5Mdr.html
+++ b/5Mdr.html
@@ -79,8 +79,7 @@ var ui = document.getElementById('map-ui');
  
  
     
-//addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
-
+//addLayer
 addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 Km', 5);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 Km', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 Km', 3);
