--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -25,8 +25,8 @@ L.control.layers({
     'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
     'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
 }, {
-    'Bike Stations': L.mapbox.tileLayer('examples.bike-locations'),
-    'Bike Lanes': L.mapbox.tileLayer('examples.bike-lanes')
+    '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
+    '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf')
 }).addTo(map);
 </script>
 
