--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -26,7 +26,8 @@ L.control.layers({
     'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
 }, {
     '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
-    '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf')
+    '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf'),
+    '20Km': L.mapbox.tileLayer('lucamoiana.i058i92l')
 }).addTo(map);
 </script>
 
