--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -27,7 +27,11 @@ L.control.layers({
 }, {
     '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
     '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf'),
-    '20Km': L.mapbox.tileLayer('lucamoiana.i058i92l')
+    '20Km': L.mapbox.tileLayer('lucamoiana.i058i92l'),
+    'Ristori': L.mapbox.featureLayer('lucamoiana.i09fgicl'),
+    'Parcheggi':L.mapbox.featureLayer('lucamoiana.i2f34pn3')
+    
+    
 }).addTo(map);
 </script>
 
