--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -32,6 +32,7 @@ L.control.layers({
     '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
     '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf'),
     '20Km': L.mapbox.tileLayer('lucamoiana.i058i92l'),
+    'Gruppo': L.layerGroup([ristori, corto]),
     'Ristori': L.mapbox.featureLayer('lucamoiana.i09fgicl'),
     'Parcheggi':L.mapbox.featureLayer('lucamoiana.i2f34pn3')
     
