--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -28,8 +28,8 @@ var 20Km = L.mapbox.tileLayer('lucamoiana.i058i92l');
 L.layerGroup([ristori, corto])
 
 L.control.layers({
-    //'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
-    //'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
+    'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
+    'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
 }, {
     '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
     '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf'),
