--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -31,8 +31,8 @@ var parcheggi = L.mapbox.featureLayer('lucamoiana.i2f34pn3');
 
 
 L.control.layers({
-    'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
-    'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
+    //'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
+    //'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
 }, {
     
     '20Km': L.layerGroup([lungo_ristoro, lungo]).addTo(map),,
