Modificate coordinate cislago

--- a/weather.html
+++ b/weather.html
@@ -11,8 +11,8 @@
 <script type="text/javascript">
 function init() {
 	//Center of map
-	var lat = 7486473; 
-	var lon = 4193332;
+	var lat = 45.660827; 
+	var lon = -74.0059731;
 	var lonlat = new OpenLayers.LonLat(lon, lat);
         var map = new OpenLayers.Map("basicMap");
 	// Create overlays
